--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do Lista - na Klasach!</title>
+    <!-- To Do List on Class -->
   </head>
   <style>
     body {
-      /* background-color: #081522; */
       margin: 0;
       padding: 0;
       font-size: 30px;
