--- a/index.html
+++ b/index.html
@@ -1,65 +1,23 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To Do Lista - na Klasach!</title>
-    <!-- To Do List on Class -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" />
+    <title>To Do Lista (on Class)</title>
   </head>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-size: 30px;
-      background-image: url("shopping.jpg");
-      background-size: cover;
-      background-repeat: no-repeat;
-      color: yellowgreen;
-      font-family: "Lucida Sans Unicode", "Lucida Sans", sans-serif;
-    }
-    #bgc {
-      background-color: rgba(0, 9, 16, 0.9);
-      width: 100vw;
-      height: 100vh;
-    }
-    section {
-      padding-top: 60px;
-      padding-left: 60px;
-    }
-    h1 {
-      font-size: 40px;
-      color: #fff;
-      display: inline;
-    }
-    #class {
-      color: brown;
-      font-size: 20px;
-    }
-    input {
-      font-size: 24px;
-    }
-    button.add {
-      margin: 0 10px;
-      padding: 2px 10px;
-      font-size: 20px;
-    }
-    button.delete {
-      margin-left: 20px;
-      font-size: 20px;
-      padding: 3px;
-    }
-    ul {
-      margin: 0px;
-    }
-  </style>
   <body>
     <div id="bgc">
       <section>
-        <h1>Lista zadań</h1>
-        <span id="class"> (na Klasach)</span>
-        <p><input type="text" /><button class="add">Dodaj</button></p>
-        <span> Zadań do zrobienia: </span><span id="count"></span>
+        <h1>Tasks List</h1>
+        <span id="class"> (on Class)</span>
+      </br>
+        <input type="text" placeholder="task name..." /><button class="add">Add</button>
+          <br>
+        <span>Tasks to do: </span><span id="count"></span>
         <ul></ul>
       </section>
     </div>
